Update layout to use correct APF logo path

--- a/_layouts/apf-design.html
+++ b/_layouts/apf-design.html
@@ -318,7 +318,7 @@
   <header>
     <div class="header-container">
       <a href="/" class="logo">
-        <img src="/assets/images/apf-logo-real.svg" alt="Ascent Partners Foundation">
+        <img src="/assets/images/apf-logo.svg" alt="Ascent Partners Foundation">
       </a>
       <nav>
         <a href="/">HOME</a>
